# oxml_tabledetector

./: README.md  pyproject.toml
