[tool.poetry]
name = "oxml-tabledetector"
version = "0.1.0"
description = ""
authors = ["Boris Podolny <bpodolnyi@gmail.com>"]
readme = "README.md"
packages = [{include = "oxml_tabledetector"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
